tests/baselines/reference/booleanAssignment.errors.txt
tests/cases/compiler/booleanAssignment.ts(2,1): error TS2322: Type '1' is not assignable to type 'Boolean'.
tests/cases/compiler/booleanAssignment.ts(3,1): error TS2322: Type '"a"' is not assignable to type 'Boolean'.
tests/cases/compiler/booleanAssignment.ts(4,1): error TS2322: Type '{}' is not assignable to type 'Boolean'.
  Types of property 'valueOf' are incompatible.
    Type '() => Object' is not assignable to type '() => boolean'.
      Type 'Object' is not assignable to type 'boolean'.


==== tests/cases/compiler/booleanAssignment.ts (3 errors) ====
    var b = new Boolean();
    b = 1; // Error
    ~
!!! error TS2322: Type '1' is not assignable to type '{|Boolean|0|}'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:529:11
    b = "a"; // Error
    ~
!!! error TS2322: Type '"a"' is not assignable to type '{|Boolean|0|}'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:529:11
    b = {}; // Error
    ~
!!! error TS2322: Type '{}' is not assignable to type '{|Boolean|0|}'.
!!! error TS2322:   Types of property 'valueOf' are incompatible.
!!! error TS2322:     Type '() => {|Object|1|}' is not assignable to type '() => boolean'.
!!! error TS2322:       Type '{|Object|2|}' is not assignable to type 'boolean'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:529:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
    
    var o = {};
    o = b; // OK
    
    b = true; // OK
    
    var b2:boolean;
    b = b2; // OK